@@ -1,6 +1,11 @@
 
 SVN
 -------------------------------
+XML:   Resolved issue CASTOR-599 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       UnmarshalHandler doesn't chain exception
+       Details: http://jira.codehaus.org/browse/CASTOR-599
+       (Edward - 20061007)
+
 XML:   Resolved issue CASTOR-1613 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Finish @throws javadoc
        Details: http://jira.codehaus.org/browse/CASTOR-1613
